kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airbnb-pejt-domov
spec:
  selector:
    app: airbnb-pejt-domov
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
